[package]
name = "xenon-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.1.3", features = ["restore-state-none"] }
embedded-graphics = "0.8.1"
flume = "0.11.0"
futures = "0.3.30"
hashbrown = { version = "0.14.5", default-features = false, features = [
    "serde",
] }
heapless = "0.8.0"
log = "0.4.22"
miniz_oxide = "0.8.0"
paste = "1.0.15"
rand = { version = "0.8.5", default-features = false }
static_cell = "2.1.0"
thiserror = "1.0.63"
